FIX en header, Mi perfil, modif course

--- a/front/src/app/components/commons/curso/curso.component.html
+++ b/front/src/app/components/commons/curso/curso.component.html
@@ -29,12 +29,12 @@
           <div class="d-grid gap-2 d-md-flex justify-content-md-end">
             <button class="btn btn-secondary me-md-2" type="button" [routerLink]="['/cursos']">Volver</button>
 
-            <button class="btn btn-primary" type="button" (click)="registerInCourse()"
-              [disabled]="!isAuth()">Inscribirse</button>
+            <button *ngIf="!isAdmin" class="btn btn-primary" type="button" (click)="registerInCourse()"
+              [disabled]="!(isAuth() | async )">Inscribirse</button>
           </div>
           <hr>
           <div class="d-grid gap-2">
-            <small *ngIf="!isAuth()" class="alert alert-danger alert-dismissible fade show" role="alert">
+            <small *ngIf="!(isAuth() | async)" class="alert alert-danger alert-dismissible fade show" role="alert">
               Registrate para anotarte <a class="btn btn-primary" routerLink="/login">AQUÍ</a>
               <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Cerrar"></button>
             </small>
