--- a/front/src/app/modules/pages/cursos/cursos.component.html
+++ b/front/src/app/modules/pages/cursos/cursos.component.html
@@ -40,10 +40,8 @@
                             <ul class="list-group list-group-flush"
                                 style="display:flex; justify-content: flex-start; align-content: center;">
                                 <li class="list-group-item">{{course.shortDescription}}</li>
-                                <li class="list-group-item"><u>Comienza:</u> {{course.courseStartDate | date:'dd - MM -
-                                    yyyy'
-                                    }}
-                                </li>
+                                <li class="list-group-item"><u>Comienza:</u> {{course.courseStartDate |
+                                    date:'dd-MM-yyyy' }}</li>
                                 <li class="list-group-item"><u>Día:</u> {{course.schedule}}</li>
                                 <li class="list-group-item"><u>Total clases:</u> {{course.amountclasses}}</li>
                             </ul>
