--- a/front/src/app/modules/layout/header/header.component.html
+++ b/front/src/app/modules/layout/header/header.component.html
@@ -26,6 +26,9 @@
                         <!-- <li class="nav-item m-3">
                             <a class="nav-link" aria-current="page" routerLink='/precios'>Nuestros Planes</a>
                         </li> -->
+                        <li class="nav-item m-3">
+                            <a class="nav-link" aria-current="page" routerLink='/publicaciones'>Publicaciones</a>
+                        </li> 
                         <li class="nav-item m-3" *ngIf="isLoggedIn() | async">
                             <span>
                                 <a class="nav-link" aria-current="page" [routerLink]="['/miperfil', id.id]">
