--- a/front/src/app/modules/dashboard/dashboard-page/dashboard-page.component.css
+++ b/front/src/app/modules/dashboard/dashboard-page/dashboard-page.component.css
@@ -1,21 +1,25 @@
-section{
-    padding: 20px;
-    margin: 5px;
+#courses {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
 }
-.mainimage{
-    width: 300px; /* Puedes ajustar el ancho del contenedor según tus necesidades */
-    height: 200px; /* Puedes ajustar la altura del contenedor según tus necesidades */
-    position: relative;
-    overflow: hidden;
-  }
-  .contenedor img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
-  
-  
+
+#courses td, #courses th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#courses tr:nth-child(even){background-color: #f2f2f2;}
+
+#courses tr:hover {background-color: #ddd;}
+
+#courses th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #04AA6D;
+  color: white;
+}
   
   
   
