Subida de imagenes

--- a/front/src/app/components/commons/curso/curso.component.html
+++ b/front/src/app/components/commons/curso/curso.component.html
@@ -1,19 +1,21 @@
-<div class="col-md-10" style="margin: 20px; display: flex; justify-content: center;">
-  <div class="card mb-10 rounded-4 shadow-lg" style="max-width: 540px;">
+<div class="col-md-12" style="margin: 20px; display: flex; justify-content: center;">
+  <div class="card mb-12 rounded-4 shadow-lg" style="max-width: 540px;">
     <div class="row g-0">
       <div class="col-md-4">
-        <img src="../../../../assets/fondo-curso.jpg" class="img-fluid rounded-start" alt="...">
-        <img src="../../../../assets/fondo-curso.jpg" class="img-fluid rounded-start" alt="...">
-        <img src="../../../../assets/fondo-curso.jpg" class="img-fluid rounded-start" alt="...">
+        <img *ngIf="course.pathImage != null " class="img-fluid" src="assets/public/uploads/{{course.pathImage}}"
+          style="margin: 5px; border-radius: 50% 20% / 10% 40% !important;">
+        <img *ngIf="course.pathImage === null " class="img-fluid" src="assets/fondo-curso.jpg"
+          style="margin: 5px; border-radius: 50% 20% / 10% 40%;">
       </div>
       <div class="col-md-8">
         <div class="card-body">
-          <h1 class="card-title">{{course.courseName}}</h1>
+          <h1 class="card-header">{{course.courseName}}</h1>
           <div class="d-grid gap-2 d-md-flex justify-content-md-end">
             <button class="btn btn-primary" type="button" *ngIf="isTeacherOrAdmin"
               [routerLink]="['/cursos/modifcourse', course.id]">Modificar</button>
             <a class="btn btn-danger" type="a" *ngIf="isAdmin" (click)="delete(course.id)">Eliminar</a>
           </div>
+
           <hr>
           <h4 class="card-text">Descripción del curso</h4>
           <p class="card-text">{{course.description}}</p>
