agregando modificar y crear publicaciones

--- a/front/src/app/components/commons/publicacion/publicacion.component.html
+++ b/front/src/app/components/commons/publicacion/publicacion.component.html
@@ -1,15 +1,36 @@
-<div class="feature col">
-    <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-collection" viewBox="0 0 16 16">
-            <path d="M2.5 3.5a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1h-11zm2-2a.5.5 0 0 1 0-1h7a.5.5 0 0 1 0 1h-7zM0 13a1.5 1.5 0 0 0 1.5 1.5h13A1.5 1.5 0 0 0 16 13V6a1.5 1.5 0 0 0-1.5-1.5h-13A1.5 1.5 0 0 0 0 6v7zm1.5.5A.5.5 0 0 1 1 13V6a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5h-13z"/>
-        </svg>
+<div class="col-md-10" style="margin: 20px; display: flex; justify-content: center;">
+  <div class="card mb-10 rounded-4 shadow-lg" style="max-width: 540px;">
+    <div class="row g-0">
+      <div class="col-md-8">
+        <div class="card-body">
+          <h1 class="card-title">{{publication.title}}</h1>
+          <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+            <button class="btn btn-primary" type="button" *ngIf="isAdmin"
+              [routerLink]="['/publicaciones/modifpublicacion', publication.id]">Modificar</button>
+            <a class="btn btn-danger" type="a" *ngIf="isAdmin" (click)="delete(publication.id)">Eliminar</a>
+          </div>
+          <hr>
+          <h4 class="card-text">Descripción de la publicacion</h4>
+          <p class="card-text">{{publication.description}}</p>
+          <hr>
+          <p class="card-text"><u>Fecha:</u> {{publication.start_date | date:'dd-MM-yyyy'}}</p>
+          <hr>
+          <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+        </div>
+        <div class="card-footer">
+          <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+            <button class="btn btn-secondary me-md-2" type="button" [routerLink]="['/publicaciones']">Volver</button>
+          </div>
+          <!--
+          <hr>
+          <div class="d-grid gap-2">
+            <small *ngIf="!(isAuth() | async)" class="alert alert-danger alert-dismissible fade show" role="alert">
+              Registrate para anotarte <a class="btn btn-primary" routerLink="/login">AQUÍ</a>
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Cerrar"></button>
+            </small>
+          </div>-->
+        </div>
+      </div>
     </div>
-    <h3 class="fs-2 text-body-emphasis">Título de Publicación</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque officiis sunt magni, earum natus tempora magnam suscipit ipsa est rerum eius esse hic quasi molestiae molestias a exercitationem cupiditate eum!</p>
-    <a href="#" class="icon-link">
-      Ver más
-      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
-        <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
-      </svg>
-    </a>
   </div>
+</div>
