--- a/front/src/app/modules/pages/publicaciones/publicaciones.component.html
+++ b/front/src/app/modules/pages/publicaciones/publicaciones.component.html
@@ -17,14 +17,14 @@
                                     yyyy'
                                     }}
                                 </li>-->
-                                <li class="list-group-item"><u>Día de inicio:</u> {{publication.start_date}}</li>
+                                <li class="list-group-item"><u>Día:</u> {{publication.start_date}}</li>
                                 <!--<li class="list-group-item"><u>Total clases:</u> {{publication.finish_date}}</li>-->
                             </ul>
                             <div class="card-body">
-                                <!--<div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                                    <a class="btn btn-primary me-md-2" [routerLink]="['/cursos/details', course.id]">Ver
+                                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                                    <a class="btn btn-primary me-md-2" [routerLink]="['/publicaciones/details', publication.id]">Leer
                                         más</a>
-                                </div>-->
+                                </div>
                             </div>
                         </div>
                     </div>
